task1/test_results_defects/infer_test/function_return_value_unchecked/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:88: warning: Condition Always False
  Boolean condition  `(a!=0)` is always false at line 88, column 6.
  86. 	char buf = function_return_value_unchecked_003_func_001(); /*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  87. 	a--;
  88. 	if (a!=0)
           ^
  89. 	{
  90. 		if(buf != '\0')

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:120: warning: Condition Always False
  Boolean condition  `(flag==1)` is always false at line 120, column 3.
  118. 	switch (flag)
  119. 	{
  120. 		case 1:
         ^
  121. 		{
  122. 			if( (strcmp(s.a,"STRING") ==0) )

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:126: warning: Condition Always False
  Boolean condition  `(flag==2)` is always false at line 126, column 3.
  124. 			break;
  125. 		}
  126. 		case 2:
         ^
  127. 		{
  128. 			if( (strcmp(s.a,"STRING1") >0) )

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:132: warning: Condition Always False
  Boolean condition  `(flag==3)` is always false at line 132, column 3.
  130. 			break;
  131. 		}
  132. 		case 3:
         ^
  133. 		{
  134. 			if(s.b <=20)

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:173: warning: Condition Always True
  Boolean condition  `!(u.b>0)` is always false at line 173, column 12.
  171. 		u = function_return_value_unchecked_005_s_001_func_001();/*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  172.         if (i==5)
  173.        	if(u.b >0)
                  ^
  174.         		u.c= 60.5;
  175. 	}

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:198: error: Buffer Overrun L2
  Offset: [0, 6] (⇐ [0, 3] + [0, 3]) Size: 1.
  196. 		   for ( j=0 ;j<4; j++)
  197. 		   {
  198. 		       *(p[i]+j) += (i+j);
                ^
  199. 		   }
  200. 	   }

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:212: warning: Condition Always False
  Boolean condition  `(j!=0)` is always false at line 212, column 9.
  210. 	{
  211. 		ptr = function_return_value_unchecked_006_func_001();/*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  212. 		for(;(j!=0 && j<4);j++)
               ^
  213. 		{
  214. 	        if(*(ptr[j]) >0)

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:240: error: Integer Overflow L5
  ([-oo, +oo] + 1):signed32.
  238. 	int i=function_return_value_unchecked_007_func_001();/*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  239. 	//if (i<10)
  240. 		i++;
         ^
  241. }
  242. 

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:258: error: Integer Overflow L5
  ([-oo, +oo] + 1):signed32.
  256. 	int i=function_return_value_unchecked_008_func_001(6.00); /*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  257. 	//if (i<10)
  258. 		i++;
         ^
  259. }
  260. /*

#9
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:277: warning: Condition Always False
  Boolean condition  `(a==20)` is always false at line 277, column 8.
  275.     int a=10,b=2,c=0;
  276.     double arr[] = {1.0,2.0,3.0,4.0};
  277.     if(a == 20)
              ^
  278.     {
  279.     	if ( function_return_value_unchecked_009_func_001( arr, (sizeof (arr)/sizeof (double)) )  > a)

#10
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:282: warning: Condition Always False
  Boolean condition  `(b!=2)` is always false at line 282, column 14.
  280.     		a++;
  281.     }
  282.     else if (b != 2)
                    ^
  283.     {
  284.     	if ( function_return_value_unchecked_009_func_001( arr, (sizeof (arr)/sizeof (double)) )  < b)

#11
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:287: warning: Condition Always False
  Boolean condition  `(c>0)` is always false at line 287, column 14.
  285.     		b++;
  286.     }
  287.     else if (c >0)
                    ^
  288.     {
  289.     	if ( function_return_value_unchecked_009_func_001( arr, (sizeof (arr)/sizeof (double)) )  == 0)

#12
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:344: warning: Condition Always True
  Boolean condition  `!1` is always false at line 344, column 11.
  342. void function_return_value_unchecked_012 ()
  343. {
  344.     while(1)
                 ^
  345.     {
  346.          fputc((int)'A', stdout);     /*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/

#13
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:362: warning: Condition Always True
  Boolean condition  `!returned by function_return_value_unchecked_013_func_001()` is always false at line 362, column 8.
  360. void function_return_value_unchecked_013 ()
  361. {
  362.     if(function_return_value_unchecked_013_func_001())
              ^
  363.     {
  364.         fputs("STRING#", stdout);    /*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/

#14
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:390: warning: Condition Always True
  Boolean condition  `!(flag==6)` is always false at line 390, column 5.
  388. 	switch(flag)
  389.     {
  390.     case 6:
           ^
  391.         puts("TEST");    /*Tool should detect this line as error*/ /*ERROR:Return value of function never checked*/
  392.         {

#15
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/function_return_value_unchecked.c:433: warning: Condition Always True
  Boolean condition  `!(u.b>0)` is always false at line 433, column 10.
  431.        	if(i!=3)
  432. 		{
  433. 		    if(u.b >0 && u.a !=NULL && u.c != 0)
                ^
  434.         		   u.c= 60.5;
  435. 		}

Found 16 issues
                      Issue Type(ISSUED_TYPE_ID): #
  Condition Always False(CONDITION_ALWAYS_FALSE): 8
    Condition Always True(CONDITION_ALWAYS_TRUE): 5
        Integer Overflow L5(INTEGER_OVERFLOW_L5): 2
            Buffer Overrun L2(BUFFER_OVERRUN_L2): 1
